2003-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColorList.m
	[_loadAvailableColorLists] check if a directory exists before
	looking for a colour list in it.

2003-02-08 22:56  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView_actions.m (-lowerBaseline:): Change the correct
	attribute.

	(-turnOffLigatures:, -useStandardLigatures:): Correct the attribute
	changes.

2003-02-08 22:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSFontInfo.m (-defaultLineHeightForFont),
	Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Improve
	calculation of line height and make it match the baseline calculation
	when typesetting.

2003-02-08 22:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-sendEvent:): On right mouse down, check if
	the view that is hit has a pop-up menu, and if so, display it
	instead of sending the event to the view. Based on patch from
	Matt Rice.

2003-02-08 17:51  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSLayoutManager.h, Source/NSLayoutManager.m:
	Add -characterIndexMoving:fromCharacterIndex:originalCharacterIndex:
	distance: method.

	* Source/NSTextView.m: Keep track of the selection affinity.

	* Source/NSTextView_actions.m: Use the new method and affinity
	handling to reimplement the insertion point movement actions.

2003-02-07 17:47  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSTextStorage.m (-setAttributes:range:): Fix memory leak.

2003-02-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/libgnustep-gui.def: Regenerated
	* ColorPickers/GNUmakefile: add local library paths
	* Source/GSLayoutManager.m: Use rand() rather than random() as it
	is portable to mingw32.

Wed Feb  5 04:56:45 2003  Serg Stoyan <stoyan@hologr.com>
	
	* Source/NSMenuItemCell.m ([-drawKeyEquivalentWithFrame:inView:]): 
	Do not draw the key equivalent if we are owned by a popup, and are
	drawing the small popup image.
	